# kaggle-disaster-tweets-nlp

./: .gitignore  README.md  pyproject.toml
scripts/: train_tfidf.py
scripts/archive/: v1_tfidf_lr_baseline.py  v2_tfidf_lr_kw.py  v3_tfidf_lr_nostop.py  v4_tfidf_lr_kw_nostop.py  v5_tfidf_lr_kw_nostop_subtf.py  v6_tfidf_lr_kw_nostop_C_tuning.py  v7_tfidf_lr_threshold_tuning.py
src/: evaluate.py  features.py  model.py
src/nlp_with_disaster_tweets/: evaluate.py  features.py  model.py
